# Gemini-Image-Tool

./: .gitignore  .pylintrc  BUILD.md  README.md  README_en.md  api_client.py  app.py  app_logic.py  config.py  database.py  flet_app.py  flet_app_logic.py  i18n.py  logger_utils.py  pyproject.toml  requirements.txt  ticker.py
.github/workflows/: pylint.yml
assets/: script.js  style.css
common/: config.py  database.py  i18n.py  image_util.py  job_manager.py  logger_utils.py  text_encoder.py
component/: assets_block.py  chat_page.py  flet_assets_block.py  flet_chat_page.py  flet_gallery_component.py  flet_history_page.py  flet_main_page.py  flet_settings_page.py  flet_single_edit_tab.py  header.py  history_page.py  main_page.py  settings_page.py
fletapp/: flet_app_logic.py
fletapp/component/: common_component.py  flet_chat_page.py  flet_gallery_component.py  flet_history_page.py  flet_image_preview_dialog.py  flet_image_preview_dialog_new.py  flet_prompt_manager_tab.py  flet_queue_page.py  flet_settings_page.py  flet_single_edit_tab.py
gapp/: app_logic.py  ticker.py
gapp/component/: assets_block.py  chat_page.py  header.py  history_page.py  main_page.py  settings_page.py
geminiapi/: api_client.py
inno_scripts/: bundle.iss
lang/: en.json  zh.json
tests/: test_api_client.py  test_database.py
